<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="unJugador">1 Player</string>
    <string name="dosJugadores">2 Players</string>
    <string name="nivelFacil">Easy</string>
    <string name="nivelNormal">Normal</string>
    <string name="nivelDificil">Hard</string>
    <string name="casilla">Box</string>
    <string name="circuloGana">Circle Win!</string>
    <string name="cruzGana">Cross Win!</string>
    <string name="empate">Draw!</string>
</resources>